# idiomatic-rust-lab

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.codex/: mentor.md  reviewer.md  tester.md
week01-ownership-store/: Cargo.toml  README.md  TASK3.md  TASK4.md  Task05.md  task06.md  task07.md
week01-ownership-store/fixtures/: store_v1.json
week01-ownership-store/src/: error.rs  lib.rs  main.rs  model.rs  persistence.rs  store.rs
week01-ownership-store/src/api/: handlers.rs  mod.rs  state.rs
week01-ownership-store/src/http/: errors.rs  handlers.rs  mod.rs  types.rs
week01-ownership-store/src/storage/: file.rs  mod.rs
week01-ownership-store/tests/: http_api.rs  http_grep.rs  http_stats.rs  http_uniq.rs  test_server.rs
week01-text-stats/: Cargo.toml
week01-text-stats/text_stats/: Cargo.toml  TASK.md
week01-text-stats/text_stats/src/: errors.rs  stats.rs
week01-text-stats/textkit/: Cargo.toml  README.md  TASK02.md
week01-text-stats/textkit/src/: errors.rs  grep.rs  lib.rs  main.rs  stats.rs  uniq.rs
week01-text-stats/textkit/tests/: cli.rs
week01-text-stats/textkit/tests/fixtures/: sample.txt
