[package]
name = "week01-ownership-store"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = "0.6.8"
textkit = { path = "../week01-text-stats/textkit" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tempfile = "3.10.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
